feat(category): implement category list view with JSP
- Added CategoryDTO to return only category names
- Created service method to fetch all categories
- Added controller method to forward categories to JSP
- Created JSP page to display category list in UI
- Ensures backend sends only required data and frontend renders list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,22 @@ server.address=0.0.0.0
 
 server.port=8080
 
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username=system
-spring.datasource.password=tiger
+#Oracle database
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+# spring.datasource.username=system
+# spring.datasource.password=tiger
+# spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+# H2 database
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 
 
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
